testsuite/testcases/src/test/cases/unicode-blocks/unicode-blocks-f-flex.output
Reading "src/test/cases/unicode-blocks/unicode-blocks-f.flex"
Including "src/test/resources/common-unicode-enumerated-property-java"

Error in file "src/test/cases/unicode-blocks/unicode-blocks-f.flex" (line 14): 
Invalid Unicode property
\p{Block:This will never be a block name} { setCurCharPropertyValue("Alphabetic Presentation Forms"); }
   ^
